add nav_bar, and section 1

--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Dairy Business</title>
 </head>
 <body>
+            <!--------Nav bar-------->
+    <div class="nav_bar">
+        <div class="header">
+            <ul>
+                <li id="stone"><a href="#"> <img src="./assets/images/logo.png" alt=""> Yellowstone</a></li>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li id="contact"><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="cont_1">
+        <div class="sect_1">
+            <div class="wel">
+                <h2 id="yel">Welcome To Yellowstone Dairy Farm</h2>
+                <p>The best producer of Quality products in the Valley</p>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="./assets/images/cows.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
