add mid section files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </div>
-
+            <!----------welcome section------------->
     <div class="cont_1">
         <div class="sect_1">
             <div class="wel">
@@ -33,6 +33,12 @@
             <img src="./assets/images/cows.png" alt="">
         </div>
     </div>
-    
+
+    <div class="mid">
+        <h3>Yellowstone Farm Milk Production Stats</h3>
+    </div>
+
+
+   <script src="./assets/js/script.js"></script>
 </body>
 </html>
