add changes to file structure

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
             <!--------Nav bar-------->
-    <div class="nav_bar">
-        <div class="header">
+    <div id="nav_bar" >
+        <div id="header">
             <ul>
                 <li id="stone"><a href="#"> <img src="./assets/images/logo.png" alt=""> Yellowstone</a></li>
                 <li><a href="#" class="active">Home</a></li>
@@ -34,10 +34,10 @@
         </div>
     </div>
 
-    <div class="mid">
-        <h3>Yellowstone Farm Milk Production Stats</h3>
+    <div id="mid">
+        <h3>Yellowstone Farm Milk Production Stats.</h3>
     </div>
-
+    
 
    <script src="./assets/js/script.js"></script>
 </body>
