add corrections to js and html

--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
                                 <th colspan="3"><h1 id="weeklyheading"></h1></th>
                             </tr>
                             <tr>
-                                <td id="description1"></td>
+                                <td id="desc1"></td>
                                 <td id="value1"></td>
                                 <td id="units1"></td>
                             </tr>
                             <tr>
-                                <td id="description2"></td>
+                                <td id="desc2"></td>
                                 <td id="value2"></td>
                                 <td id="units2"></td>
                             </tr>
                             <tr>
-                                <td id="description3"></td>
+                                <td id="desc3"></td>
                                 <td id="value3"></td>
                                 <td id="units3"></td>
                             </tr>
                             <tr>
-                                <td id="description4"></td>
+                                <td id="desc4"></td>
                                 <td id="value4"></td>
                                 <td id="units4"></td>
                             </tr>
