add corrections and additions

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                     <article id="daily">
                         <table>
                             <tr>
-                                <th id="heading" colspan="2"></th>
+                                <th id="myhead" colspan="2"></th>
                             </tr>
                             <tr>
-                                <th id="thleft"></th>
-                                <th id="thright"></th>
+                                <th id="myleft"></th>
+                                <th id="myright"></th>
                             </tr>
                             <tr>
                                 <td id="shed1"></td>
