add corrections and additions

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div  id="container">
             
             <section id="right">
-                <h3>Milk Production In liters.</h3>
+                <h3>Milk Production In Liters.</h3>
                 <form id="data" >
                     <div id="form">
                         <label for="shedA" >Your Production in Shade A
@@ -138,14 +138,14 @@
                 </div>
             </section>
             <section id="left">
-                <h3>Stats For Year 2016</h3>
+                <h3>Stats For Year 2016.</h3>
                 <hr>
                 <h3>Monthly Income...<span><button id="MIstats" onclick="getStats()"> Rates*</button></span></h3>
                 <table>
                     <tr>
-                        <th>Month</th>
-                        <th>Production</th>
-                        <th>Income</th>
+                        <th>Month(mnths)</th>
+                        <th>Production(ltrs.)</th>
+                        <th>Income(ksh.)</th>
                     </tr>
                     <tr>
                         <td>January</td>  <td id="janProd"></td> <td id="janInc"></td> 
@@ -200,7 +200,7 @@
             <div class="row">
                 <div class="cont2">
                     <h4 id="agri">Yellowstone Ranch</h4>
-                    <p>Quality Dairy Produce in Kenya.</p>
+                    <p id="qual">Quality Dairy Produce in Kenya.</p>
                     <div class="icon">
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
