add corrections to file

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="cont_1">
         <div class="sect_1">
             <div class="wel">
-                <h2 id="yel">Welcome To Yellowstone Dairy Farm</h2>
-                <p>The best producer of Quality products in the Valley</p>
+                <h2 id="yel">Welcome To Yellowstone Dairy Farm.</h2>
+                <p>The best producer of Quality Dairy Products in the Valley.</p>
             </div>
         </div>
         <div class="photo">
@@ -140,10 +140,10 @@
             <section id="left">
                 <h3>Stats For Year 2016.</h3>
                 <hr>
-                <h3>Monthly Income...<span><button id="MIstats" onclick="getStats()"> Rates*</button></span></h3>
+                <h3>Monthly Income...<span><button id="Rates" onclick="getStats()"> Rates*</button></span></h3>
                 <table>
                     <tr>
-                        <th>Month(mnths)</th>
+                        <th>Months</th>
                         <th>Production(ltrs.)</th>
                         <th>Income(ksh.)</th>
                     </tr>
@@ -199,7 +199,7 @@
         <div class="footer_container">
             <div class="row">
                 <div class="cont2">
-                    <h4 id="agri">Yellowstone Ranch</h4>
+                    <h4 id="agri">Yellowstone Ranch.</h4>
                     <p id="qual">Quality Dairy Produce in Kenya.</p>
                     <div class="icon">
                         <a href="#"><i class="fab fa-twitter"></i></a>
