--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <button id="totals" type="submit" name="totals">Daily Total</button>
                     </div>
                 </form>
-                <div class="sums">
+                <div class="mon">
                     <article id="daily">
                         <table>
                             <tr>
@@ -101,7 +101,7 @@
                     <article id="weekly">
                         <table>
                             <tr>
-                                <th colspan="3"><h1 id="weeklyheading"></h1></th>
+                                <th colspan="3"><h1 id="weeklyH"></h1></th>
                             </tr>
                             <tr>
                                 <td id="desc1"></td>
@@ -185,7 +185,7 @@
                     </tr>
                 </table>
                 <hr>
-                <h2>Yearly Total</h2>
+                <h2>Year's Report</h2>
                 <h3 id="endyearincome"></h3>
 
 
