add generate button report

--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
             </section>
            
         </div>
+        <div class="btn-container">
+            <button onclick="window.print()" class="btn">Generate Report</button>
+        </div>
     </div>
 
     <!--footer-->
