add correction on spelling errors

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                 <h3>Milk Production In Liters.</h3>
                 <form id="data" >
                     <div id="form">
-                        <label for="shedA" >Your Production in Shade A
+                        <label for="shedA" >Your Production in Shed A
                             <input type="text" id="shedA" placeholder="Amt. in Liters">
                         </label>
 
-                        <label for="shedB" >Your Production in Shade B
+                        <label for="shedB" >Your Production in Shed B
                             <input type="text" id="shedB" placeholder="Amt. in liters">
                         </label><br>
 
-                        <label for="shedC" >Your Production in Shade C
+                        <label for="shedC" >Your Production in Shed C
                             <input type="text" id="shedC" placeholder="Amt. in Liters">
                         </label><br>
 
-                        <label for="shedD" >Your Production in Shade D
+                        <label for="shedD" >Your Production in Shed D
                             <input type="text" id="shedD" placeholder="Amt. in Liters">
                         </label><br>
                  </div>
