add final changes to html file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div  id="container">
             
             <section id="milk">
-                <h3>Milk Production In Liters.</h3>
+                <h3>Daily Milk Production In Liters.</h3>
                 <form id="data" >
                     <div id="form">
                         <label for="shedA" >Your Production in Shed A
@@ -51,7 +51,7 @@
                         </label>
 
                         <label for="shedB" >Your Production in Shed B
-                            <input type="text" id="shedB" placeholder="Amt. in liters">
+                            <input type="text" id="shedB" placeholder="Amt. in Liters">
                         </label><br>
 
                         <label for="shedC" >Your Production in Shed C
@@ -70,11 +70,11 @@
                     <article id="daily">
                         <table>
                             <tr>
-                                <th id="myhead" colspan="2"></th>
+                                <th id="day" colspan="2"></th>
                             </tr>
                             <tr>
-                                <th id="myleft"></th>
-                                <th id="myright"></th>
+                                <th id="shedsI"></th>
+                                <th id="amountI"></th>
                             </tr>
                             <tr>
                                 <td id="shed1"></td>
@@ -139,8 +139,7 @@
                 </div>
             </section>
             <section id="cash">
-                <h3>Yellostone Stats For Year.</h3>
-                <hr>
+                <h2>Yellostone Stats For Year.</h2>
                 <h3>Monthly Income...<span><button id="Rates" onclick="getStats()"> Rates*</button></span></h3>
                 <table>
                     <tr>
@@ -186,7 +185,7 @@
                     </tr>
                 </table>
                 <hr>
-                <h2>Year's Report</h2>
+                <h3>Year's Report</h3>
                 <h3 id="endyearincome"></h3>
             </section>
            
