add new data in id

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                 <form id="data" >
                     <div id="form">
                         <label for="shedA" >Your Production in Shed A
-                            <input type="text" id="shedA" placeholder="Amt. in Liters">
+                            <input type="number" id="shedA" placeholder="Amt. in Liters">
                         </label>
 
                         <label for="shedB" >Your Production in Shed B
-                            <input type="text" id="shedB" placeholder="Amt. in Liters">
+                            <input type="number" id="shedB" placeholder="Amt. in Liters">
                         </label><br>
 
                         <label for="shedC" >Your Production in Shed C
-                            <input type="text" id="shedC" placeholder="Amt. in Liters">
+                            <input type="number" id="shedC" placeholder="Amt. in Liters">
                         </label><br>
 
                         <label for="shedD" >Your Production in Shed D
-                            <input type="text" id="shedD" placeholder="Amt. in Liters">
+                            <input type="number" id="shedD" placeholder="Amt. in Liters">
                         </label><br>
                  </div>
                     <div id="btn_container">
