--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
             </div>
         </div>
     </div>
-
+        <!----------------main container section------------->
     <div id="mid">
         <h3>Yellowstone Farm Milk Production Stats.</h3>
     </div>
     <div id="main_container">
-        <div  id="container">
-            
+        <div  id="container">    
             <section id="milk">
                 <h3>Daily Milk Production In Liters.</h3>
                 <form id="data" >
@@ -66,6 +65,7 @@
                     <button id="total_btn" type="submit" name="totals">Submit Record</button>
                     </div>
                 </form>
+                <!-------Daily stats---------->
                 <div class="mon">
                     <article id="daily">
                         <table>
@@ -99,6 +99,8 @@
                         </table>
 
                     </article>
+
+                    <!------Weekly stats------->
                     <article id="weekly">
                         <table>
                             <tr>
@@ -138,6 +140,7 @@
                     </article>
                 </div>
             </section>
+            <!-----------Monthly section------------->
             <section id="cash">
                 <h2>Yellostone Stats For Year.</h2>
                 <h3>Monthly Income...<span><button id="Rates" onclick="getStats()"> Rates*</button></span></h3>
